# zendo_energy_dashboard

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  build.sh  go.mod  main.go
api/routes/: dataRoutes.go
couchdb/: filters_design_doc.json  local.ini  views_design_doc.json
cron/: Dockerfile  build.sh  crontab.txt
data_fetcher/: .env.example  Dockerfile  build.sh  go.mod  main.go
data_fetcher/errors/: databaseError.go  httpError.go
data_fetcher/model/: energy.go
data_fetcher/routes/: dataRoutes.go
data_fetcher/services/: dataService.go  electricService.go  weatherService.go
data_fetcher/utils/: pointer.go
data_processor/: .env.example  Dockerfile  Makefile  build.sh  main.py  process_historical.py  pyproject.toml
data_processor/services/: correlation_service.py  data_service.py
data_processor/utils/: data.py
lib_zendo/: go.mod
lib_zendo/model/: baseDocument.go  metric.go  weather.go
lib_zendo/services/: dataService.go
lib_zendo/utils/: http.go
scripts/: setup.sh
web_client/: .prettierrc  Dockerfile  build.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
web_client/src/: App.tsx  index.css
web_client/src/model/: httpResponse.ts  index.ts  metric.ts
web_client/src/routes/: Dashboard.tsx
web_client/src/services/: dataService.ts
